apps/production/tileserver/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tileserver
  namespace: tileserver
spec:
  template:
    spec:
      containers:
        - name: tileserver
          args:
            - "--config"
            - "/config/config.json"
            - "--public_url"
            - "https://tiles.piksel.big.go.id/"
