apps/production/tileserver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tileserver
  namespace: tileserver
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: tiles.piksel.big.go.id

spec:
  ingressClassName: nginx
  rules:
    - host: tiles.piksel.big.go.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tileserver
                port:
                  number: 80

  tls:
    - hosts:
        - tiles.piksel.big.go.id
      secretName: tileserver  # pragma: allowlist secret
